[package]
name = "rmap"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
dns-lookup = "1.0.8"
futures = "0.3.24"
structopt = "0.3.21"
thiserror = "1.0.37"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.10"
